<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:id="@+id/sudoku_layout"
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:gravity="center"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:background="@drawable/frame_block">

            <include
                android:id="@+id/block_1"
                layout="@layout/sudoku_item"

                />

            <include
                android:id="@+id/block_2"
                layout="@layout/sudoku_item" />

            <include
                android:id="@+id/block_3"
                layout="@layout/sudoku_item" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:background="@drawable/frame_block">

            <include
                android:id="@+id/block_4"
                layout="@layout/sudoku_item" />

            <include
                android:id="@+id/block_5"
                layout="@layout/sudoku_item" />

            <include
                android:id="@+id/block_6"
                layout="@layout/sudoku_item" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:background="@drawable/frame_block">

            <include
                android:id="@+id/block_7"
                layout="@layout/sudoku_item" />

            <include
                android:id="@+id/block_8"
                layout="@layout/sudoku_item" />

            <include
                android:id="@+id/block_9"
                layout="@layout/sudoku_item" />
        </TableRow>


    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sudoku_layout">

        <Button
            android:id="@+id/undo_button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/undo" />

        <Button
            android:id="@+id/pencil_button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pencil"

            />

        <Button
            android:id="@+id/erase_button"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/erese" />

    </LinearLayout>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/suduku_selection_1"
            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"

            android:text="@string/one" />

        <Button
            android:id="@+id/suduku_selection_2"
            style="@style/ItemSize"

            android:background="@drawable/frame_item_bottom"
            android:text="@string/two" />

        <Button
            android:id="@+id/suduku_selection_3"

            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"
            android:text="@string/three" />

        <Button
            android:id="@+id/suduku_selection_4"

            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"
            android:text="@string/four" />

        <Button
            android:id="@+id/suduku_selection_5"

            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"
            android:text="@string/five" />


        <Button
            android:id="@+id/suduku_selection_6"

            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"
            android:text="@string/six" />

        <Button
            android:id="@+id/suduku_selection_7"
            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"
            android:text="@string/seven" />

        <Button
            android:id="@+id/suduku_selection_8"

            style="@style/ItemSize"
            android:background="@drawable/frame_item_bottom"
            android:text="@string/eight" />

        <Button
            android:id="@+id/suduku_selection_9"

            style="@style/ItemSize"
            android:background="@drawable/frame_item_end"
            android:text="@string/nine" />
    </TableRow>


</android.support.constraint.ConstraintLayout>